--- a/styles.css
+++ b/styles.css
@@ -151,7 +151,7 @@ body {
     width: 100%;
     height: 100%;
 
-    transition: 1s left ease-in-out;
+    transition: 1s left ease-out;
 }
 
 /* 섹션 공통 */
@@ -238,6 +238,7 @@ body {
     border-radius: 18px;
     text-align: center;
     box-shadow: 0 5px 10px 0px rgb(237, 237, 237);
+    cursor: pointer;
 }
 
 .grid-item > img {
@@ -358,6 +359,7 @@ li {
 
     border: 1px solid var(--dark-gray);
     border-radius: 6px;
+    cursor: pointer;
 }
 
 .order-list li .count-btn .add-count {
@@ -408,6 +410,7 @@ li {
     border-radius: 20px;
     background-color: var(--mac-yellow);
     box-shadow: 0 2px 10px 2px rgba(0, 0, 0, 0.114);
+    cursor: pointer;
 }
 
 /* ------------------------ */
